feat: changed p tags to appropriate h tags, updated assets, cleaned up script file

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="banner">
-        <p class="companyDescription">Adding <span class="blueText">care</span> to your property</p>
+        <h2 class="companyDescription">Adding <span class="blueText">care</span> to your property</h2>
         <div class="bannerImg">
           <img src="assets/header_img.jpg" alt=""/>
         </div>
@@ -101,14 +101,14 @@
     <section id="services">
       <div class="skewed"></div>
       <div class="wrapper">
-        <p class="sectionTitle">Explore our services</p>
+        <h3 class="sectionTitle">Explore our services</h3>
         <div class="servicesContainer">
           <div class="serviceItem">
             <span class="material-symbols-outlined" data-title=" | Cleaning">
               mop
             </span>
             <p class="serviceDescription">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit alias dolores doloribus consequatur hic libero inventore ad asperiores porro beatae voluptatibus dignissimos ratione veniam, deserunt nemo molestiae culpa qui atque.
+              We offer comprehensive cleaning services, including deep cleaning, house organization, window washing, kitchen and bathroom sanitization. As well as exterior cleaning, including walls, windows, and patios. We'll make your home shine inside and out, and we even provide car cleaning and detailing.
             </p>
           </div>
           <div class="serviceItem">
@@ -116,15 +116,7 @@
               grass
             </span>
             <p class="serviceDescription">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit alias dolores doloribus consequatur hic libero inventore ad asperiores porro beatae voluptatibus dignissimos ratione veniam, deserunt nemo molestiae culpa qui atque.
-            </p>
-          </div>
-          <div class="serviceItem">
-            <span class="material-symbols-outlined" data-title=" | Painting">
-              imagesearch_roller
-            </span>
-            <p class="serviceDescription">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit alias dolores doloribus consequatur hic libero inventore ad asperiores porro beatae voluptatibus dignissimos ratione veniam, deserunt nemo molestiae culpa qui atque.
+              We provide complete landscaping and lawn care services, from regular lawn maintenance and fertilization to weed control, tree and shrub care, planting, flower design, seasonal cleanups, and pool maintenance. Your outdoor space will always look its best with our year-round dedication.
             </p>
           </div>
           <div class="serviceItem">
@@ -132,23 +124,15 @@
               handyman
             </span>
             <p class="serviceDescription">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit alias dolores doloribus consequatur hic libero inventore ad asperiores porro beatae voluptatibus dignissimos ratione veniam, deserunt nemo molestiae culpa qui atque.
+              We specialize in a wide range of handyman services, such as fixing leaks, repairing drywall, tile and grout work, and both interior and exterior painting. Contact us with your specific tasks and potential projects.
             </p>
           </div>
           <div class="serviceItem">
-            <span class="material-symbols-outlined" data-title=" | Floral Designs">
-              local_florist
-            </span>
-            <p class="serviceDescription">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit alias dolores doloribus consequatur hic libero inventore ad asperiores porro beatae voluptatibus dignissimos ratione veniam, deserunt nemo molestiae culpa qui atque.
-            </p>
-          </div>
-          <div class="serviceItem">
-            <span class="material-symbols-outlined" data-title=" | Property Management">
+            <span class="material-symbols-outlined" data-title=" | Management">
               real_estate_agent
             </span>
             <p class="serviceDescription">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit alias dolores doloribus consequatur hic libero inventore ad asperiores porro beatae voluptatibus dignissimos ratione veniam, deserunt nemo molestiae culpa qui atque.
+              We provide property management services that cover rent collection, Airbnb cleaning, restaurant or business cleaning, and property maintenance while you are away. Additionally, we offer expert post construction clean-up services to ensure your property is in pristine condition and ready for move in.
             </p>
           </div>
         </div>
@@ -193,7 +177,7 @@
           <div class="aboutDescription">
             <p>Joe & Nicole, your trusted partners in property care! With a shared passion for excellence, respect, and a commitment to reliability, we are the dynamic duo you can rely on to nurture and safeguard your valuable investments.</p>
             <p>At the core of our approach is a deep respect for both our clients and their properties. We understand that your space is more than just bricks and mortar; it's a place where memories are made and investments are secured.</p>
-            <p>You can count on us to be there when you need us, whether it's for routine maintenance, emergency repairs, or simply to offer advice and guidance. Our commitment to reliability means peace of mind for you, knowing that your property is in capable hands.</p>
+            <p>You can count on us to be there when you need us, whether it's for routine maintenance, emergency repairs, or simply to offer advice and guidance. Our commitment to reliability means peace of mind for you, and as recent expats from Canada, along with a roster of satisfied clients, we bring a blend of international experience and local expertise to ensure your property is in capable hands.</p>
           </div>
         </div>
       </div>
@@ -222,7 +206,7 @@
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                 </a>
               </li>
-              <li>
+              <!-- <li>
                 <a href="#" target="_blank" title="facebook" data-title="Follow us on Facebook">
                   <i class="fa fa-facebook" aria-hidden="true"></i>
                 </a>
@@ -231,7 +215,7 @@
                 <a href="#" target="_blank" title="instagram" data-title="Follow us on Instagram">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                 </a>
-              </li>
+              </li> -->
             </ul>
     
             <span class="socialTitle" id="socialTitle">Get in touch!</span>
@@ -317,6 +301,6 @@
 
   <!-- JavaScript -->
 
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
